# CAssistant

./: .gitattributes  CHttpSupport.cpp  CHttpSupport.h  CMakeLists.txt  DataDefine.h  Event.h  EventManager.h  LineChart.cpp  LineChart.h  LineChart.ui  README.md  clang.7z  databinder.h  main.cpp  qcustomplot.h
qmake2cmake-master/: condition_simplifier.py  condition_simplifier_cache.py  helper.py  pro2cmake.py  qmake_parser.py  requirements.txt  run_pro2cmake.py  special_case_helper.py
